# sphinx-pythia-theme

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .web-compile-config.yml  LICENSE  MANIFEST.in  README.md  index.html  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi.yaml
assets/css/: style.css  style.css.map
assets/ico/: site.webmanifest
assets/scss/: _ncar.scss  style.scss
book/: _config.yml  _toc.yml  about.md  getkitchensink.py  index.md  page2.md  this-theme.md
book/kitchen-sink/: api.rst  paragraph-markup.rst
ci/: docs.yml  environment.yml  pypi.yaml
demo/source/: chapter1.rst  chapter2.rst  chapter3.rst  conf.py  demo.ipynb  index.rst
docs/: _config.yml  _toc.yml  about.rst  conf.py  getreferences.py  index.rst  references.md  standalone.md  standalone.rst  this-theme.md
docs/_templates/: footer-extra.html
docs/kitchen-sink/: index.rst  lists-and-tables.rst
example/: index.html  page1.html  page2.html  page3.html
jb_demo/: _config.yml  _toc.yml  core.md  foundations.md  preamble.md
pythia/: globaltoc.html  navbar.html  theme.conf
pythia_book_theme/: footer.html  header.html  layout.html  theme.conf
sphinx_pythia_theme/: __init__.py  banner.py  docs-navbar.html  ex-onepage.html  ex-traditional.html  footer-extra.html  footer-info.html  footer-logos.html  footer-menu.html  footer.html  header.html  index.html  layout.html  macros.html  navbar-menu.html  navbar.html  onepage.html  page-banner.html  page-default.html  page-standalone.html  page.html  sidebar.html  theme.conf  topbar.html
(+75 files in other folders)
